Generics/Code1_error_report.txt
javac errors for Code1.java 
Code1.java:14: error: method foo in class Code1 cannot be applied to given types;
        foo(src, small, big);
        ^
  required: List<T>,List<T>,List<T>
  found: List<Number>,List<Integer>,List<Integer>
  reason: inferred type does not conform to equality constraint(s)
    inferred: Integer
    equality constraints(s): Integer,Number
  where T is a type-variable:
    T extends Object declared in method <T>foo(List<T>,List<T>,List<T>)
Code1.java:15: error: method foo in class Code1 cannot be applied to given types;
        foo(src, src, big);
        ^
  required: List<T>,List<T>,List<T>
  found: List<Number>,List<Number>,List<Integer>
  reason: inferred type does not conform to equality constraint(s)
    inferred: Integer
    equality constraints(s): Integer,Number
  where T is a type-variable:
    T extends Object declared in method <T>foo(List<T>,List<T>,List<T>)
2 errors
 
============================================================================= 
ExtendJ errors for Code1.java 
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code1.java:14: error: no method named foo(java.util.List<java.lang.Number>, java.util.List<java.lang.Integer>, java.util.List<java.lang.Integer>) in Generics.Code1 matches. However, there is a method foo(java.util.List<T>, java.util.List<T>, java.util.List<T>)
C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code1.java:15: error: no method named foo(java.util.List<java.lang.Number>, java.util.List<java.lang.Number>, java.util.List<java.lang.Integer>) in Generics.Code1 matches. However, there is a method foo(java.util.List<T>, java.util.List<T>, java.util.List<T>)
 
============================================================================= 
Eclipse ECJ errors for Code1.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code1.java (at line 14)
	foo(src, small, big);
	^^^
The method foo(List<T>, List<T>, List<T>) in the type Code1 is not applicable for the arguments (List<Number>, List<Integer>, List<Integer>)
----------
2. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code1.java (at line 15)
	foo(src, src, big);
	^^^
The method foo(List<T>, List<T>, List<T>) in the type Code1 is not applicable for the arguments (List<Number>, List<Number>, List<Integer>)
----------
2 problems (2 errors)
